# tech_shared_code

./: README.md  pyproject.toml
docs/: conf.py
qiita/azure_functions/: Makefile
qiita/azure_functions/http_trigger/: function.json
qiita/test_function/: Makefile  requirements.txt
qiita/test_function/http_trigger/: __init__.py
qiita/test_function/shared_code/: __init__.py
qiita/test_function/timer_trigger/: __init__.py
