[tool.poetry]
name = "tech_shared_code"
version = "0.1.0"
description = ""
authors = ["gsy0911 <yoshiki0911@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
azure-functions = "^1.5.0"
azure-identity = "^1.5.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.1.1"
sphinx = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
